Added UI library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,30 @@
 cmake_minimum_required(VERSION 3.27)
+
 project(KiPlay)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(KiPlay main.cpp
-        finder.cpp
-        finder.h
-        songObject.cpp
-        songObject.h
+#-----FTXUI------
+include(FetchContent)
+
+FetchContent_Declare(ftxui
+        GIT_REPOSITORY https://github.com/ArthurSonzogni/ftxui
+        GIT_TAG v5.0.0
 )
+
+FetchContent_GetProperties(ftxui)
+if(NOT ftxui_POPULATED)
+    FetchContent_Populate(ftxui)
+    add_subdirectory(${ftxui_SOURCE_DIR} ${ftxui_BINARY_DIR} EXCLUDE_FROM_ALL)
+endif()
+#----------------
+
+add_executable(KiPlay main.cpp
+        UI/mainTUI.cpp
+        UI/mainTUI.h
+)
+
+target_link_libraries(KiPlay
+    PRIVATE ftxui::screen
+    PRIVATE ftxui::dom
+    PRIVATE ftxui::component)
